# llmmo

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  Program.cs  appsettings.json  llmmo.csproj  llmmo.http
backend/Api/: ActionDurations.cs  ActionMapper.cs  ActionPayloadHelper.cs  ActionSubmissionService.cs  ApiEndpoints.cs  AttackMapper.cs  AttackSubmissionService.cs  BuildingMapper.cs  CityBootstrap.cs  CityMapper.cs  CityResourceCalculator.cs  CitySetup.cs  DiplomacyService.cs  IntelService.cs  MapDistance.cs  PossibleActionsCalculator.cs  PossibleActionsService.cs  ReportPayloadHelper.cs  TrainPreviewCalculator.cs  TroopMapper.cs
backend/Auth/: AgentManagementService.cs  ApiKeyHasher.cs  AuthHttpContextExtensions.cs  AuthMiddleware.cs  AuthOptions.cs  AuthService.cs  (+3 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
harness/: .dockerignore  .gitignore  Dockerfile  README.md  config.docker.yaml  config.example.yaml  localsetup.md  pyproject.toml  setup.md
harness/llmmo_harness/: __init__.py  __main__.py  cli.py  client.py  config.py  executor.py  memory.py  queue.py  schema.py  state.py
harness/llmmo_harness/planner/: base.py  mock.py  normalize.py  ollama.py  validation.py
harness/plans/: mock_default.json
harness/scripts/: mock_planner.py
harness/tests/: test_config.py  test_decision_memory.py  test_executor_reason.py  test_normalize.py  test_ollama.py  test_possible_actions.py  test_schema_commands.py
(+212 files in other folders)
