[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmmo-harness"
version = "0.1.0"
description = "LLM agent harness for LLMMO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.scripts]
llmmo-harness = "llmmo_harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmmo_harness*"]
